--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,14 @@
 dependencies/
 tmp/
 lib/
+.lib/
 
 # rails specific
 *.sqlite3
 config/database.yml
 log/*
 tmp/*
+.tmp/
 
 # java specific
 *.class
