--- a/src/imaster-client/.jshintrc
+++ b/src/imaster-client/.jshintrc
@@ -44,7 +44,7 @@
   "eqnull"        : false,     // true: Tolerate use of `== null`
 //  "esversion"     : 5,         // {int} Specify the ECMAScript version to which the code must adhere.
   "moz"           : false,     // true: Allow Mozilla specific syntax (extends and overrides esnext features)
-  // (ex: `for each`, multiple try/catch, function expression…)
+  // (ex: `for each`, multiple try/catch, function expressionï¿½)
   "evil"          : false,     // true: Tolerate use of `eval` and `new Function()`
   "expr"          : false,     // true: Tolerate `ExpressionStatement` as Programs
   "funcscope"     : false,     // true: Tolerate defining variables inside control statements
@@ -86,6 +86,14 @@
   "wsh"           : false,    // Windows Scripting Host
   "yui"           : false,    // Yahoo User Interface
 
+  "predef": [
+    "angular",
+    "define",
+    "require",
+    "app"
+  ],
+
   // Custom Globals
   "globals"       : {}        // additional predefined global variables
+
 }
