--- a/src/imaster-client/bower.json
+++ b/src/imaster-client/bower.json
@@ -13,7 +13,10 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.3",
-    "angular-ui-router": "^0.2.18"
+    "angular": "~1.5.3",
+    "angular-ui-router": "^0.2.18",
+    "angular-file-upload": "^2.3.2"
+  },
+  "devDependencies": {
   }
 }
