--- a/src/imaster-client/package.json
+++ b/src/imaster-client/package.json
@@ -16,16 +16,18 @@
   "homepage": "https://github.com/sleshJdev/i-magister#readme",
   "devDependencies": {
     "browser-sync": "^2.12.8",
-    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-angular-filesort": "^1.1.1",
     "gulp-angular-templatecache": "^1.8.0",
+    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^4.0.0",
+    "gulp-htmlmin": "^2.0.0",
     "gulp-inject": "^4.1.0",
     "gulp-jshint": "^2.0.1",
     "gulp-main-bower-files": "^1.5.0",
+    "gulp-minify": "0.0.11",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
@@ -34,6 +36,8 @@
     "gulp-util": "^3.0.7",
     "http-proxy-middleware": "^0.13.0",
     "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0",
+    "ng-annotate": "^1.2.1",
     "path": "^0.12.7",
     "vinyl-source-stream": "^1.1.0"
   },
