--- a/src/imaster-server/src/main/resources/application.conf
+++ b/src/imaster-server/src/main/resources/application.conf
@@ -3,7 +3,7 @@ databaseConfig = "default"
 default = {
   connectionPool = "HikariCP"
   driverClassName = "org.h2.Driver"
-  url = "jdbc:h2:tcp://localhost/~/imaster"
+  url = "jdbc:h2:tcp://localhost:9900/~/imaster"
   user = "root"
   password = "root"
   minPoolSize = 1
